# game_of_life

./: CMakeLists.txt
src/: main.cpp
